Fix docs responsiveness on mobile

--- a/docs/css/styles.scss
+++ b/docs/css/styles.scss
@@ -80,7 +80,7 @@ nav {
 	&:before {
 		content: "\2261";
 		display: block;
-		font-size: 3em;
+		font-size: 2.3em;
 		font-family: $font-code;
 		text-align: right;
 		margin-right: 0.16em; // for refined positioning
